[package]
name = "rust-game"
version = "0.1.1"
include = ["src/**/*", "Cargo.toml"]
edition = "2021"
rust-version = "1.72.0"

[features]
default = ["crossterm"]
# all-widgets = ["widget-calendar"]
# widget-calendar = ["dep:time"]
# macros = []
# serde = ["dep:serde", "bitflags/serde"]

[dependencies]
ratatui = { version = "0.22.0", features = ["all-widgets"] }
crossterm = { version = "0.27", optional = true }
# bitflags = "2.3"
# cassowary = "0.3"
# indoc = "2.0"
# itertools = "0.11"
# paste = "1.0.2"
# serde = { versqion = "1", optional = true, features = ["derive"] }
# strum = { version = "0.25", features = ["derive"] }
# termion = { version = "2.0", optional = true }
# termwiz = { version = "0.20.0", optional = true }
# time = { version = "0.3.11", optional = true, features = ["local-offset"] }
# unicode-segmentation = "1.10"
# unicode-width = "0.1"

# [dev-dependencies]
# anyhow = "1.0.71"
argh = "0.1"
# criterion = { version = "0.5", features = ["html_reports"] }
# fakeit = "1.1"
rand = "0.8"
# pretty_assertions = "1.4.0"
